plugins {
    id 'java'
    id 'net.ltgt.apt' version '0.10'
}

group 'kirilenko.cli'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

apply plugin: 'application'
mainClassName = 'kirilenko.cli.Main'

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    compileOnly 'org.projectlombok:lombok:1.18.4'

    apt 'org.projectlombok:lombok:1.18.4'
    
    compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
    compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
    compile group: 'args4j',             name: 'args4j',        version: '2.0.25'
    compile group: 'args4j',             name: 'args4j-site',   version: '2.0.25'
}
